added api in swagger docs;
